use media queries to ensure add competition box has updated border radius (so it is not too round), updated font sizes (so that it is always visible) and not too high when the height is reduced (eg when the phone is rotated to landscape)

--- a/src/components/AddCompetitionButton/AddCompetitionButton.module.css
+++ b/src/components/AddCompetitionButton/AddCompetitionButton.module.css
@@ -7,4 +7,13 @@
   @media (max-width: $mantine-breakpoint-lg) {
     width: 90%;
   }
+
+  @media (max-height: $mantine-breakpoint-sm) and (max-width: $mantine-breakpoint-sm) {
+    height: 45%;
+    border-radius: 1.5rem;
+  }
+
+  @media (max-height: $mantine-breakpoint-xs) or (max-width: $mantine-breakpoint-xs) {
+    font-size: 1rem;
+  }
 }
